fix footer alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1216,15 +1216,18 @@ ol.default li {
 }
 
 #footer .copyright li {
-    display: inline-block;
+    display: block;
+    text-align:center;
+    padding-top:5px;
+
 }
 
-#footer .copyright li:before {
+/* #footer .copyright li:before {
     display: inline;
     content: '\2022';
     opacity: 0.5;
     padding: 0 0.75em 0 0.75em;
-}
+} */
 
 #footer .copyright li:first-child:before {
     display: none;
